User Guide Modified

--- a/appScreenshots/Breathing.html
+++ b/appScreenshots/Breathing.html
@@ -19,27 +19,48 @@
 	</head>
 <body style="background-color:#abe6ff">
 	<div id = "description" sytle="height:300px;">
-		<h1>Description</h1>
+		<h1>Breathing Rate System</h1><br/>
+		
+		<h3>Description</h3>
 		<hr/>
-		<p>
-		This Breathing System allows asthma patients and doctors registering for the system. Patients can periodically self-report their breathing rate. Doctors can login to the system to view patients' data. The following functions are to be provided as an Android application:
+		
+		<p>Hate <b>QUEUING</b> in Hospital just for regular breathing rate checking????????</p>
+		<p>This new Breathing Rate System provides a solution for both patients and doctors to avoid the WAITS and QUEUES!!! Patients can just periodically self-record their breathing rate according to their doctors instructions at home or anywhere. Besides that, they could also view their own breathing rate history. On another hand, Doctors can also view all their patients breathing rate without actually meeting the patients directly.</p>
+		<p>This system is designed to be as SIMPLE as possible. It's GUARANTEE to be user friendly and easy to use even for aged people. </p>
+		<p><b><u>Features</u></b>
+		<ul style:"list-style:bullet">
+			<li>Register and Login</li>
+			<li>Patients</li>
+			<ul>
+				<li>Record breathing rate using the stopwatch provided</li>
+				<li>View history</li>
+			</ul>
+			<li>Doctors</li>
+			<ul>
+				<li>View all patients</li>
+				<li>View the data for each patient</li>
+			</ul>
+		</ul>
 		</p>
-		<ol>
-			<li>permit patients and doctors to register for the asthma health diary service</li>
-			<li>permit patients to record their breathing data: number of breaths taken in a 1 minute interval</li>
-			<li>prompt patients to perform a daily breathing test and report the data</li>
-			<li>store patient data in an sqlite database on the patient's Android phone</li>
-			<li>permit the patient view their breathing data in a graphical</li>
-			<li>sync patient breathing data with database and web service</li>
-			<li>permit doctors to browse, fetch, and display, historical data for their patients</li>
-			<li>provide a stop watch to help patients capture their breathing data</li>
-		</ol>	
-
-
 	</div>
+	<br/>
 	
+	<div id = "what's new">
+		<h3>What's NEW!!!</h3>
+		<hr/>
+		<p>Possible Future Improvements</p>
+		<ol>
+			<li>More beautiful interface</li>
+			<li>Reminder to record breathing rate for patients</li>
+			<li>Search function for doctors to search from patient lists</li>
+			<li>Time settings and filters for viewing patients data</li>
+			<li>Additional Table view in viewing the data</li>
+			<li>More interactive interface in breathing rate recording</li>
+		</ol>
+		
+	</div>
 	<div id = "screen shot">
-		<h1>Screen Shots</h1>
+		<h3>Screen Shots</h3>
 		<hr/>
 		<div id = "shot1" style="display:block;">
 			<img class ="shot" src="mainpage.png"/>
