user guide modified.. hahaha.. :) again.. :( sorry guys.. :)

--- a/appScreenshots/Breathing.html
+++ b/appScreenshots/Breathing.html
@@ -42,6 +42,35 @@
 			</ul>
 		</ul>
 		</p>
+		<p><b><u>Brief User Guide</u></b></p>
+		<ul>
+		<li>Register</li>
+			<ol>
+				<li>Click on register button on the front page</li>
+				<li>Fill in the Title, Username, First Name, Last Name, and Password, and click OK</li>
+			</ol>
+		<li>Login</li>
+			<ol>
+				<li>Click on Login button</li>
+				<li>Fill in using the registered username and password</li>
+			</ol>
+		<li>For Patients</li>
+			<ol>
+				<li>Once login, patient will be redirected to breathing recording page</li>
+				<li>Start the stopwatch to start recording</li>
+				<li>Stop the stopwatch to stop recording</li>
+				<li>Reset the stopwatch to reset the count</li>
+				<li>Once the stopwatch reach 60s, patient can enter their breathing count in the text box specified</li>
+				<li>Click Send once finished</li>
+				<li>Use menu on the top right of the page to go to the view history page and to go back to the breathing recording page</li>
+			</ol>
+		<li>For Doctors</li>
+			<ol>
+				<li>Once login, doctor will be redirected to doctor page that contains list of all patients</li>
+				<li>Click on any patient to view their breathing history</li>
+			</ol>
+		</ul>
+		
 	</div>
 	<br/>
 	
