modified the path of images

--- a/User Guide/Breathing.html
+++ b/User Guide/Breathing.html
@@ -165,10 +165,10 @@
 			</h3>
 			<hr>
 			<div id="shot1" style="display:block;">
-				<img class="shot" src="mainpage.png"> <img class="shot" src="register.png"> <img class="shot" src="login.png"> <img class="shot" src="breathing_rec_start.png">
+				<img class="shot" src="./Picture/mainpage.png"> <img class="shot" src="./Picture/register.png"> <img class="shot" src="./Picture/login.png"> <img class="shot" src="./Picture/breathing_rec_start.png">
 			</div>
 			<div id="shot2" style="display:block;">
-				<img class="shot" src="breathing_enter_rate.png"> <img class="shot" src="patientlist.png"> <img class="shot" src="respgraph.png">
+				<img class="shot" src="./Picture/breathing_enter_rate.png"> <img class="shot" src="./Picture/patientlist.png"> <img class="shot" src="./Picture/respgraph.png">
 			</div>
 		</div>
 	</body>
