added names to user guide

--- a/User Guide/Breathing.html
+++ b/User Guide/Breathing.html
@@ -36,6 +36,14 @@
 			<h1>
 				Breathing Rate System
 			</h1><br>
+			<h2>Group Members</h2>
+			<div>
+			<ul>
+				<li>Carlo Felix Zanotta Dumit - 21203542</li>
+				<li>JINANG LU - 20709977</li>
+				<li>Angeline Honggowarsito - 20640062</li>
+			</ul>
+			</div>
 			<h3>
 				Description
 			</h3>
